# mymanim

./: .gitignore  README.md  cinematic_path.py  cylinder.py  derivative_parabola.py  first.py  main.py  nor_gate_demo.py  pyproject.toml
doc/: FAQ.md
